fix: katex vulnerability
* feat: change production url

* fix: apply active toc link highlighting on build

* fix: layout shift on scroll

* feat: update og image

* fix: layout shift on scroll

* fix: update titles

* fix: katex vulnerability

* feat: update og image

--- a/src/components/Endpoint/NoContentEndpoint.module.css
+++ b/src/components/Endpoint/NoContentEndpoint.module.css
@@ -1,6 +1,7 @@
 .container {
   position: relative;
-  font: var(--ifm-code-font-size) / var(--ifm-pre-line-height) var(--ifm-font-family-monospace);
+  font: var(--ifm-code-font-size) / var(--ifm-pre-line-height)
+    var(--ifm-font-family-monospace);
 }
 
 .codeBlockTitle {
